[tool.poetry]
name = "api_test"
version = "0.1.0"
description = ""
authors = ["yuis"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
pytest = "^7.2.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
